--- a/docs/latex/_define_8cs_source.tex
+++ b/docs/latex/_define_8cs_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{_define_8cs_source}{}\doxysection{Define.\+cs}
-\label{_define_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Define.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Define.cs}}
+\label{_define_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Define.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Define.cs}}
 \mbox{\hyperlink{_define_8cs}{이 파일의 문서화 페이지로 가기}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\Hypertarget{_define_8cs_source_l00001}00001\ }
