--- a/docs/latex/_extension_8cs.tex
+++ b/docs/latex/_extension_8cs.tex
@@ -1,5 +1,5 @@
-\hypertarget{_extension_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Extension.cs 파일 참조}
-\label{_extension_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Extension.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Extension.cs}}
+\hypertarget{_extension_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Utility/\+Extension.cs 파일 참조}
+\label{_extension_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Extension.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Extension.cs}}
 \doxysubsection*{클래스}
 \begin{DoxyCompactItemize}
 \item 
