--- a/docs/latex/_util_8cs_source.tex
+++ b/docs/latex/_util_8cs_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{_util_8cs_source}{}\doxysection{Util.\+cs}
-\label{_util_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Util.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Util.cs}}
+\label{_util_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Util.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Util.cs}}
 \mbox{\hyperlink{_util_8cs}{이 파일의 문서화 페이지로 가기}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\Hypertarget{_util_8cs_source_l00001}00001\ \textcolor{keyword}{using\ }System.Collections;}
