--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -12,11 +12,12 @@
 \item\contentsline{section}{\mbox{\hyperlink{class_resource_manager}{Resource\+Manager}} \\*에셋 파일을 로드하는 Manager }{\pageref{class_resource_manager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_scene_manager}{Scene\+Manager}} }{\pageref{class_scene_manager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_sound_manager}{Sound\+Manager}} }{\pageref{class_sound_manager}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_test}{Test}} }{\pageref{class_test}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_u_i___base}{UI\+\_\+\+Base}} }{\pageref{class_u_i___base}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_u_i___button}{UI\+\_\+\+Button}} }{\pageref{class_u_i___button}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_u_i___event_handler}{UI\+\_\+\+Event\+Handler}} }{\pageref{class_u_i___event_handler}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} }{\pageref{class_u_i___popup}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_u_i___scene}{UI\+\_\+\+Scene}} }{\pageref{class_u_i___scene}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_u_i_manager}{UIManager}} \\*게임 씬 상에서 생길 여러가지 UI 캔버스 프리팹들의 생성과 삭제를 관리 }{\pageref{class_u_i_manager}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_u_i_manager}{UIManager}} \\*UI 캔버스 프리팹들의 생성과 삭제를 관리 }{\pageref{class_u_i_manager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_util}{Util}} }{\pageref{class_util}}{}
 \end{DoxyCompactList}
