--- a/docs/latex/class_define.tex
+++ b/docs/latex/class_define.tex
@@ -112,4 +112,4 @@ Drag&\\
 
 이 클래스에 대한 문서화 페이지는 다음의 파일로부터 생성되었습니다.\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_define_8cs}{Define.\+cs}}\end{DoxyCompactItemize}
+C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_define_8cs}{Define.\+cs}}\end{DoxyCompactItemize}
