--- a/docs/latex/class_extension.tex
+++ b/docs/latex/class_extension.tex
@@ -60,4 +60,4 @@ static void \mbox{\hyperlink{class_extension_a40b318e19e601c790c74f27bccc3277e}{
 
 이 클래스에 대한 문서화 페이지는 다음의 파일로부터 생성되었습니다.\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_extension_8cs}{Extension.\+cs}}\end{DoxyCompactItemize}
+C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_extension_8cs}{Extension.\+cs}}\end{DoxyCompactItemize}
