--- a/docs/latex/class_resource_manager.tex
+++ b/docs/latex/class_resource_manager.tex
@@ -64,7 +64,7 @@ void \mbox{\hyperlink{class_resource_manager_a3d8540720596e320425d0cfca291255b}{
 
 
 \begin{DoxyParams}{매개변수}
-{\em path에} & 해당하는 Game\+Object 생성 \\
+{\em Prefabs폴더를} & 시작 위치로 path에 해당하는 Game\+Object 생성 \\
 \hline
 {\em 부모} & 오브젝트를 parent 로 설정 \\
 \hline
@@ -104,7 +104,7 @@ void \mbox{\hyperlink{class_resource_manager_a3d8540720596e320425d0cfca291255b}{
 
 
 \begin{DoxyParams}{매개변수}
-{\em Resource폴더를} & 시작 위치로 path에 해당하는 에셋 파일 로드 \\
+{\em Resources폴더를} & 시작 위치로 path에 해당하는 에셋 파일 로드 \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{반환값}
