--- a/docs/latex/class_u_i___button.tex
+++ b/docs/latex/class_u_i___button.tex
@@ -257,7 +257,7 @@ Popup 닫기
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00016\ \ \ \ \ \{}
-\DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ \textcolor{comment}{//GameManager.UIMng.ClosePopupUI(this);}}
+\DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_game_manager}{GameManager}}.\mbox{\hyperlink{class_game_manager_abc4ef6be32ba1c96f8e2b3b89dfba67d}{UIMng}}.\mbox{\hyperlink{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}{ClosePopupUI}}(\textcolor{keyword}{this});}
 \DoxyCodeLine{00018\ \ \ \ \ \}}
 
 \end{DoxyCode}
