--- a/docs/latex/class_util.tex
+++ b/docs/latex/class_util.tex
@@ -149,4 +149,4 @@ static Game\+Object \mbox{\hyperlink{class_util_a7d029f1f523fabef49f2be1d7380758
 
 이 클래스에 대한 문서화 페이지는 다음의 파일로부터 생성되었습니다.\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_util_8cs}{Util.\+cs}}\end{DoxyCompactItemize}
+C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_util_8cs}{Util.\+cs}}\end{DoxyCompactItemize}
