--- a/docs/latex/hierarchy.tex
+++ b/docs/latex/hierarchy.tex
@@ -16,6 +16,7 @@
 \item \contentsline{section}{Pool\+Able}{\pageref{class_pool_able}}{}
 \item \contentsline{section}{Scene\+Manager}{\pageref{class_scene_manager}}{}
 \item \contentsline{section}{Sound\+Manager}{\pageref{class_sound_manager}}{}
+\item \contentsline{section}{Test}{\pageref{class_test}}{}
 \item \contentsline{section}{UI\+\_\+\+Base}{\pageref{class_u_i___base}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{UI\+\_\+\+Popup}{\pageref{class_u_i___popup}}{}
