--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -201,6 +201,7 @@
 \input{class_resource_manager}
 \input{class_scene_manager}
 \input{class_sound_manager}
+\input{class_test}
 \input{class_u_i___base}
 \input{class_u_i___button}
 \input{class_u_i___event_handler}
@@ -209,10 +210,6 @@
 \input{class_u_i_manager}
 \input{class_util}
 \chapter{파일 문서화}
-\input{_define_8cs}
-\input{_define_8cs_source}
-\input{_extension_8cs}
-\input{_extension_8cs_source}
 \input{_data_manager_8cs}
 \input{_data_manager_8cs_source}
 \input{_game_manager_8cs}
@@ -235,6 +232,8 @@
 \input{_pool_8cs_source}
 \input{_pool_able_8cs}
 \input{_pool_able_8cs_source}
+\input{_test_8cs}
+\input{_test_8cs_source}
 \input{_u_i___base_8cs}
 \input{_u_i___base_8cs_source}
 \input{_u_i___button_8cs}
@@ -245,6 +244,10 @@
 \input{_u_i___popup_8cs_source}
 \input{_u_i___scene_8cs}
 \input{_u_i___scene_8cs_source}
+\input{_define_8cs}
+\input{_define_8cs_source}
+\input{_extension_8cs}
+\input{_extension_8cs_source}
 \input{_util_8cs}
 \input{_util_8cs_source}
 %--- End generated contents ---
