--- a/docs/latex/_define_8cs.tex
+++ b/docs/latex/_define_8cs.tex
@@ -1,5 +1,5 @@
-\hypertarget{_define_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Define.cs 파일 참조}
-\label{_define_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Define.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Define.cs}}
+\hypertarget{_define_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Utility/\+Define.cs 파일 참조}
+\label{_define_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Define.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Define.cs}}
 \doxysubsection*{클래스}
 \begin{DoxyCompactItemize}
 \item 
