--- a/docs/latex/_extension_8cs_source.tex
+++ b/docs/latex/_extension_8cs_source.tex
@@ -1,5 +1,5 @@
 \hypertarget{_extension_8cs_source}{}\doxysection{Extension.\+cs}
-\label{_extension_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Extension.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Extension.cs}}
+\label{_extension_8cs_source}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Extension.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Extension.cs}}
 \mbox{\hyperlink{_extension_8cs}{이 파일의 문서화 페이지로 가기}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\Hypertarget{_extension_8cs_source_l00001}00001\ \textcolor{keyword}{using\ }System;}
