--- a/docs/latex/_u_i___popup_8cs_source.tex
+++ b/docs/latex/_u_i___popup_8cs_source.tex
@@ -15,7 +15,7 @@
 \DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00011}00011\ }
 \DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00015}\mbox{\hyperlink{class_u_i___popup_a6a9fb29c5b5022a73016d3b9ad19aafe}{00015}}\ \ \ \ \ \textcolor{keyword}{public}\ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_u_i___popup_a6a9fb29c5b5022a73016d3b9ad19aafe}{ClosePopupUI}}()}
 \DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00016}00016\ \ \ \ \ \{}
-\DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00017}00017\ \ \ \ \ \ \ \ \ \textcolor{comment}{//GameManager.UIMng.ClosePopupUI(this);}}
+\DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00017}00017\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_game_manager}{GameManager}}.\mbox{\hyperlink{class_game_manager_abc4ef6be32ba1c96f8e2b3b89dfba67d}{UIMng}}.\mbox{\hyperlink{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}{ClosePopupUI}}(\textcolor{keyword}{this});}
 \DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00018}00018\ \ \ \ \ \}}
 \DoxyCodeLine{\Hypertarget{_u_i___popup_8cs_source_l00019}00019\ \}}
 
