--- a/docs/latex/_util_8cs.tex
+++ b/docs/latex/_util_8cs.tex
@@ -1,5 +1,5 @@
-\hypertarget{_util_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Util.cs 파일 참조}
-\label{_util_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Util.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Util.cs}}
+\hypertarget{_util_8cs}{}\doxysection{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/C\#/\+Utility/\+Util.cs 파일 참조}
+\label{_util_8cs}\index{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Util.cs@{C:/Users/ddino/Documents/WorkSpace/UnityProjects/alpha-\/project/night\_and\_knight/Assets/C\#/Utility/Util.cs}}
 \doxysubsection*{클래스}
 \begin{DoxyCompactItemize}
 \item 
