--- a/docs/latex/class_u_i_manager.tex
+++ b/docs/latex/class_u_i_manager.tex
@@ -2,14 +2,24 @@
 \label{class_u_i_manager}\index{UIManager@{UIManager}}
 
 
-게임 씬 상에서 생길 여러가지 UI 캔버스 프리팹들의 생성과 삭제를 관리  
+UI 캔버스 프리팹들의 생성과 삭제를 관리  
 
 
 \doxysubsection*{Public 멤버 함수}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{class_u_i_manager_a9927b92157fc265e61799437bc3d0c34}{Set\+Canvas}} (Game\+Object go, bool sort=true)
-\end{DoxyCompactItemize}
+\item 
+T \mbox{\hyperlink{class_u_i_manager_a24d241f17a976ffd226a5a85c8ca6a79}{Show\+Scene\+UI$<$ T $>$}} (string name=null)
+\item 
+T \mbox{\hyperlink{class_u_i_manager_ad4c80654123d4b920de9b6135ce0f1b5}{Show\+Popup\+UI$<$ T $>$}} (string name=null)
+\item 
+void \mbox{\hyperlink{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}{Close\+Popup\+UI}} ()
+\begin{DoxyCompactList}\small\item\em 가장 Order가 높은 Popup\+UI 제거 \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{class_u_i_manager_a539e380cd5f5c9413a9de08c982ff960}{Close\+Popup\+UI}} (\mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} popup)
+\item 
+void \mbox{\hyperlink{class_u_i_manager_a9c45b1ca55f9749a0875024b8cda2044}{Close\+All\+Popup\+UI}} ()
+\begin{DoxyCompactList}\small\item\em 모든 Popup\+UI 제거 \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{속성}
 \begin{DoxyCompactItemize}
 \item 
@@ -20,20 +30,102 @@ Game\+Object \mbox{\hyperlink{class_u_i_manager_a9b07d4317d951d5a4f0bce4f1a40556
 \item 
 int \mbox{\hyperlink{class_u_i_manager_ad9548c3722176e3c7393150195ccda8e}{m\+Order}} = 10
 \item 
-Stack$<$ \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} $>$ \mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{m\+Popup\+Stack}} = new Stack$<$\mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}}$>$()
-\item 
 \mbox{\hyperlink{class_u_i___scene}{UI\+\_\+\+Scene}} \mbox{\hyperlink{class_u_i_manager_a32e41023d8bef34ecb5544fbbff1c239}{m\+Scene\+UI}} = null
+\item 
+Stack$<$ \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} $>$ \mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{m\+Popup\+Stack}} = new Stack$<$\mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}}$>$()
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{상세한 설명}
-게임 씬 상에서 생길 여러가지 UI 캔버스 프리팹들의 생성과 삭제를 관리 
+UI 캔버스 프리팹들의 생성과 삭제를 관리 
 
 \mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00008}{8}} 번째 라인에서 정의되었습니다.
 
 
 
 \doxysubsection{멤버 함수 문서화}
+\mbox{\Hypertarget{class_u_i_manager_a9c45b1ca55f9749a0875024b8cda2044}\label{class_u_i_manager_a9c45b1ca55f9749a0875024b8cda2044}} 
+\index{UIManager@{UIManager}!CloseAllPopupUI@{CloseAllPopupUI}}
+\index{CloseAllPopupUI@{CloseAllPopupUI}!UIManager@{UIManager}}
+\doxysubsubsection{\texorpdfstring{CloseAllPopupUI()}{CloseAllPopupUI()}}
+{\footnotesize\ttfamily void Close\+All\+Popup\+UI (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+모든 Popup\+UI 제거 
+
+
+
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00116}{116}} 번째 라인에서 정의되었습니다.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{00117\ \ \ \ \ \{}
+\DoxyCodeLine{00118\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (\mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Count\ >\ 0)}
+\DoxyCodeLine{00119\ \ \ \ \ \ \ \ \ \{}
+\DoxyCodeLine{00120\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}{ClosePopupUI}}();}
+\DoxyCodeLine{00121\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{00122\ \ \ \ \ \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}\label{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}} 
+\index{UIManager@{UIManager}!ClosePopupUI@{ClosePopupUI}}
+\index{ClosePopupUI@{ClosePopupUI}!UIManager@{UIManager}}
+\doxysubsubsection{\texorpdfstring{ClosePopupUI()}{ClosePopupUI()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+{\footnotesize\ttfamily void Close\+Popup\+UI (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+가장 Order가 높은 Popup\+UI 제거 
+
+
+
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00085}{85}} 번째 라인에서 정의되었습니다.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{00086\ \ \ \ \ \{}
+\DoxyCodeLine{00087\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Count\ ==\ 0)}
+\DoxyCodeLine{00088\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
+\DoxyCodeLine{00089\ }
+\DoxyCodeLine{00090\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_u_i___popup}{UI\_Popup}}\ popupUI=\ \mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Pop();}
+\DoxyCodeLine{00091\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_game_manager}{GameManager}}.\mbox{\hyperlink{class_game_manager_a496f52583a8ea4b899679fe3254546ed}{ResourceMng}}.\mbox{\hyperlink{class_resource_manager_a3d8540720596e320425d0cfca291255b}{Destroy}}(popupUI.gameObject);}
+\DoxyCodeLine{00092\ \ \ \ \ \ \ \ \ popupUI\ =\ \textcolor{keyword}{null};}
+\DoxyCodeLine{00093\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_u_i_manager_ad9548c3722176e3c7393150195ccda8e}{mOrder}}-\/-\/;}
+\DoxyCodeLine{00094\ \ \ \ \ \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{class_u_i_manager_a539e380cd5f5c9413a9de08c982ff960}\label{class_u_i_manager_a539e380cd5f5c9413a9de08c982ff960}} 
+\index{UIManager@{UIManager}!ClosePopupUI@{ClosePopupUI}}
+\index{ClosePopupUI@{ClosePopupUI}!UIManager@{UIManager}}
+\doxysubsubsection{\texorpdfstring{ClosePopupUI()}{ClosePopupUI()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
+{\footnotesize\ttfamily void Close\+Popup\+UI (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}}}]{popup }\end{DoxyParamCaption})}
+
+
+\begin{DoxyParams}{매개변수}
+{\em 가장} & Order가 높은 Popup\+UI 확인 후 제거 \\
+\hline
+\end{DoxyParams}
+
+
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00099}{99}} 번째 라인에서 정의되었습니다.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{00100\ \ \ \ \ \{}
+\DoxyCodeLine{00101\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Count\ ==\ 0)}
+\DoxyCodeLine{00102\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
+\DoxyCodeLine{00103\ }
+\DoxyCodeLine{00104\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Peek()\ !=\ popup)}
+\DoxyCodeLine{00105\ \ \ \ \ \ \ \ \ \{}
+\DoxyCodeLine{00106\ \ \ \ \ \ \ \ \ \ \ \ \ Debug.Log(\textcolor{stringliteral}{"{}Close\ Popup\ Failed"{}});}
+\DoxyCodeLine{00107\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
+\DoxyCodeLine{00108\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{00109\ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00110\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_u_i_manager_a4416f9eb9f7d5966110fbef4b5bd5a63}{ClosePopupUI}}();}
+\DoxyCodeLine{00111\ \ \ \ \ \}}
+
+\end{DoxyCode}
 \mbox{\Hypertarget{class_u_i_manager_a9927b92157fc265e61799437bc3d0c34}\label{class_u_i_manager_a9927b92157fc265e61799437bc3d0c34}} 
 \index{UIManager@{UIManager}!SetCanvas@{SetCanvas}}
 \index{SetCanvas@{SetCanvas}!UIManager@{UIManager}}
@@ -42,18 +134,108 @@ Stack$<$ \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} $>$ \mbox{\hyperl
 
 
 \begin{DoxyParams}{매개변수}
-{\em go의} & 캔버스 컴포넌트 가져와 sort order값 세팅 \\
+{\em sort가} & true면, go의 Canvas 컴포넌트를 가져와 m\+Order값을 1더해서 설정 (Popup\+UI) \\
+\hline
+{\em sort가} & false면 go의 Canvas 컴포넌트를 가져와 m\+Order값을 0으로 설정 (Scene\+UI) \\
 \hline
 \end{DoxyParams}
 
 
-\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00030}{30}} 번째 라인에서 정의되었습니다.
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00031}{31}} 번째 라인에서 정의되었습니다.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{00031\ \ \ \ \ \{}
-\DoxyCodeLine{00032\ \ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00033\ \ \ \ \ \}}
+\DoxyCodeLine{00032\ \ \ \ \ \{}
+\DoxyCodeLine{00033\ \ \ \ \ \ \ \ \ Canvas\ canvas\ =\ \mbox{\hyperlink{class_util}{Util}}.GetOrAddComponent<Canvas>(go);}
+\DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ canvas.renderMode\ =\ RenderMode.ScreenSpaceOverlay;}
+\DoxyCodeLine{00035\ \ \ \ \ \ \ \ \ canvas.overrideSorting\ =\ \textcolor{keyword}{true};\ \textcolor{comment}{//\ 부모\ 캔버스와는\ 독립적인\ 오더값을\ 가짐}}
+\DoxyCodeLine{00036\ }
+\DoxyCodeLine{00037\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (sort)}
+\DoxyCodeLine{00038\ \ \ \ \ \ \ \ \ \{}
+\DoxyCodeLine{00039\ \ \ \ \ \ \ \ \ \ \ \ \ canvas.sortingOrder\ =\ \mbox{\hyperlink{class_u_i_manager_ad9548c3722176e3c7393150195ccda8e}{mOrder}}++;}
+\DoxyCodeLine{00040\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{00041\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{else}}
+\DoxyCodeLine{00042\ \ \ \ \ \ \ \ \ \{}
+\DoxyCodeLine{00043\ \ \ \ \ \ \ \ \ \ \ \ \ canvas.sortingOrder\ =\ 0;}
+\DoxyCodeLine{00044\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{00045\ \ \ \ \ \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{class_u_i_manager_ad4c80654123d4b920de9b6135ce0f1b5}\label{class_u_i_manager_ad4c80654123d4b920de9b6135ce0f1b5}} 
+\index{UIManager@{UIManager}!ShowPopupUI$<$ T $>$@{ShowPopupUI$<$ T $>$}}
+\index{ShowPopupUI$<$ T $>$@{ShowPopupUI$<$ T $>$}!UIManager@{UIManager}}
+\doxysubsubsection{\texorpdfstring{ShowPopupUI$<$ T $>$()}{ShowPopupUI< T >()}}
+{\footnotesize\ttfamily T Show\+Popup\+UI$<$ T $>$ (\begin{DoxyParamCaption}\item[{string}]{name = {\ttfamily null} }\end{DoxyParamCaption})}
+
+
+\begin{DoxyParams}{매개변수}
+{\em 이름이} & name인 Popup\+UI 생성 \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{반환값}
+생성한 Popup\+UI T컴포넌트로 리턴 
+\end{DoxyReturn}
+\begin{Desc}
+\item[타입 한정자들]\begin{description}
+\item[{\em T} : {\em \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}}}]\end{description}
+\end{Desc}
+
+
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00068}{68}} 번째 라인에서 정의되었습니다.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{00068\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ :\ \mbox{\hyperlink{class_u_i___popup}{UI\_Popup}}}
+\DoxyCodeLine{00069\ \ \ \ \ \{}
+\DoxyCodeLine{00070\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\textcolor{keywordtype}{string}.IsNullOrEmpty(name))}
+\DoxyCodeLine{00071\ \ \ \ \ \ \ \ \ \ \ \ \ name\ =\ typeof(T).Name;}
+\DoxyCodeLine{00072\ }
+\DoxyCodeLine{00073\ \ \ \ \ \ \ \ \ GameObject\ go\ =\ \mbox{\hyperlink{class_game_manager}{GameManager}}.\mbox{\hyperlink{class_game_manager_a496f52583a8ea4b899679fe3254546ed}{ResourceMng}}.\mbox{\hyperlink{class_resource_manager_a04b388e19bffc92646a7c885976a9bbd}{Instantiate}}(\$\textcolor{stringliteral}{"{}UI/PopupUI/\{name\}"{}});}
+\DoxyCodeLine{00074\ \ \ \ \ \ \ \ \ T\ popupUI\ =\ \mbox{\hyperlink{class_util}{Util}}.GetOrAddComponent<T>(go);}
+\DoxyCodeLine{00075\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_u_i_manager_a1383fcc65dbf2f647d79707e0dbbc3ed}{mPopupStack}}.Push(popupUI);}
+\DoxyCodeLine{00076\ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00077\ \ \ \ \ \ \ \ \ go.transform.SetParent(\mbox{\hyperlink{class_u_i_manager_a9b07d4317d951d5a4f0bce4f1a405561}{Root}}.transform);}
+\DoxyCodeLine{00078\ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00079\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ popupUI;}
+\DoxyCodeLine{00080\ \ \ \ \ \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{class_u_i_manager_a24d241f17a976ffd226a5a85c8ca6a79}\label{class_u_i_manager_a24d241f17a976ffd226a5a85c8ca6a79}} 
+\index{UIManager@{UIManager}!ShowSceneUI$<$ T $>$@{ShowSceneUI$<$ T $>$}}
+\index{ShowSceneUI$<$ T $>$@{ShowSceneUI$<$ T $>$}!UIManager@{UIManager}}
+\doxysubsubsection{\texorpdfstring{ShowSceneUI$<$ T $>$()}{ShowSceneUI< T >()}}
+{\footnotesize\ttfamily T Show\+Scene\+UI$<$ T $>$ (\begin{DoxyParamCaption}\item[{string}]{name = {\ttfamily null} }\end{DoxyParamCaption})}
+
+
+\begin{DoxyParams}{매개변수}
+{\em 이름이} & name인 Scene\+UI 생성 \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{반환값}
+생성한 scene\+UI T컴포넌트로 리턴 
+\end{DoxyReturn}
+\begin{Desc}
+\item[타입 한정자들]\begin{description}
+\item[{\em T} : {\em \mbox{\hyperlink{class_u_i___scene}{UI\+\_\+\+Scene}}}]\end{description}
+\end{Desc}
+
+
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00051}{51}} 번째 라인에서 정의되었습니다.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{00051\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ :\ \mbox{\hyperlink{class_u_i___scene}{UI\_Scene}}}
+\DoxyCodeLine{00052\ \ \ \ \ \{}
+\DoxyCodeLine{00053\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\textcolor{keywordtype}{string}.IsNullOrEmpty(name))}
+\DoxyCodeLine{00054\ \ \ \ \ \ \ \ \ \ \ \ \ name\ =\ typeof(T).Name;}
+\DoxyCodeLine{00055\ }
+\DoxyCodeLine{00056\ \ \ \ \ \ \ \ \ GameObject\ go\ =\ \mbox{\hyperlink{class_game_manager}{GameManager}}.\mbox{\hyperlink{class_game_manager_a496f52583a8ea4b899679fe3254546ed}{ResourceMng}}.\mbox{\hyperlink{class_resource_manager_a04b388e19bffc92646a7c885976a9bbd}{Instantiate}}(\$\textcolor{stringliteral}{"{}UI/SceneUI/\{name\}"{}});}
+\DoxyCodeLine{00057\ \ \ \ \ \ \ \ \ T\ sceneUI\ =\ \mbox{\hyperlink{class_util}{Util}}.GetOrAddComponent<T>(go);}
+\DoxyCodeLine{00058\ }
+\DoxyCodeLine{00059\ \ \ \ \ \ \ \ \ go.transform.SetParent(\mbox{\hyperlink{class_u_i_manager_a9b07d4317d951d5a4f0bce4f1a405561}{Root}}.transform);}
+\DoxyCodeLine{00060\ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00061\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ sceneUI;}
+\DoxyCodeLine{00062\ \ \ \ \ \}}
 
 \end{DoxyCode}
 
@@ -77,7 +259,7 @@ Stack$<$ \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} $>$ \mbox{\hyperl
 
 
 
-\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00012}{12}} 번째 라인에서 정의되었습니다.
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00013}{13}} 번째 라인에서 정의되었습니다.
 
 \mbox{\Hypertarget{class_u_i_manager_a32e41023d8bef34ecb5544fbbff1c239}\label{class_u_i_manager_a32e41023d8bef34ecb5544fbbff1c239}} 
 \index{UIManager@{UIManager}!mSceneUI@{mSceneUI}}
@@ -87,7 +269,7 @@ Stack$<$ \mbox{\hyperlink{class_u_i___popup}{UI\+\_\+\+Popup}} $>$ \mbox{\hyperl
 
 
 
-\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00013}{13}} 번째 라인에서 정의되었습니다.
+\mbox{\hyperlink{_u_i_manager_8cs_source}{UIManager.\+cs}} 파일의 \mbox{\hyperlink{_u_i_manager_8cs_source_l00012}{12}} 번째 라인에서 정의되었습니다.
 
 
 
