--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,8 +1,6 @@
 \doxysection{파일 목록}
 다음은 모든 파일에 대한 목록입니다. (간략한 설명만을 보여줍니다) \+:\begin{DoxyCompactList}
-\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_define_8cs}{Define.\+cs}} }{\pageref{_define_8cs}}{}
-\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_extension_8cs}{Extension.\+cs}} }{\pageref{_extension_8cs}}{}
-\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_util_8cs}{Util.\+cs}} }{\pageref{_util_8cs}}{}
+\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\mbox{\hyperlink{_test_8cs}{Test.\+cs}} }{\pageref{_test_8cs}}{}
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Managers/\mbox{\hyperlink{_data_manager_8cs}{Data\+Manager.\+cs}} }{\pageref{_data_manager_8cs}}{}
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Managers/\mbox{\hyperlink{_game_manager_8cs}{Game\+Manager.\+cs}} }{\pageref{_game_manager_8cs}}{}
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Managers/\mbox{\hyperlink{_input_manager_8cs}{Input\+Manager.\+cs}} }{\pageref{_input_manager_8cs}}{}
@@ -19,4 +17,7 @@
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+UI/\mbox{\hyperlink{_u_i___event_handler_8cs}{UI\+\_\+\+Event\+Handler.\+cs}} }{\pageref{_u_i___event_handler_8cs}}{}
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+UI/\mbox{\hyperlink{_u_i___popup_8cs}{UI\+\_\+\+Popup.\+cs}} }{\pageref{_u_i___popup_8cs}}{}
 \item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+UI/\mbox{\hyperlink{_u_i___scene_8cs}{UI\+\_\+\+Scene.\+cs}} }{\pageref{_u_i___scene_8cs}}{}
+\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_define_8cs}{Define.\+cs}} }{\pageref{_define_8cs}}{}
+\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_extension_8cs}{Extension.\+cs}} }{\pageref{_extension_8cs}}{}
+\item\contentsline{section}{C\+:/\+Users/ddino/\+Documents/\+Work\+Space/\+Unity\+Projects/alpha-\/project/night\+\_\+and\+\_\+knight/\+Assets/\+C\#/\+Utility/\mbox{\hyperlink{_util_8cs}{Util.\+cs}} }{\pageref{_util_8cs}}{}
 \end{DoxyCompactList}
