--- a/docs/latex/dir_d287fdd1a051d1a3a10b76e8db777a8d.tex
+++ b/docs/latex/dir_d287fdd1a051d1a3a10b76e8db777a8d.tex
@@ -16,5 +16,7 @@
 \item 
 파일 \mbox{\hyperlink{_extension_8cs}{Extension.\+cs}}
 \item 
+파일 \mbox{\hyperlink{_test_8cs}{Test.\+cs}}
+\item 
 파일 \mbox{\hyperlink{_util_8cs}{Util.\+cs}}
 \end{DoxyCompactItemize}
