--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -201,6 +201,7 @@
 \input{class_resource_manager}
 \input{class_scene_manager}
 \input{class_sound_manager}
+\input{class_test}
 \input{class_u_i___base}
 \input{class_u_i___button}
 \input{class_u_i___event_handler}
@@ -235,6 +236,8 @@
 \input{_pool_8cs_source}
 \input{_pool_able_8cs}
 \input{_pool_able_8cs_source}
+\input{_test_8cs}
+\input{_test_8cs_source}
 \input{_u_i___base_8cs}
 \input{_u_i___base_8cs_source}
 \input{_u_i___button_8cs}
